fixed featured row spacing

--- a/src/page-sections/home/feature-row/feature-row.module.scss
+++ b/src/page-sections/home/feature-row/feature-row.module.scss
@@ -97,6 +97,12 @@ $landing-title-color: #4a4a4a;
   .heading {
     margin-top: 0;
   }
+
+  .image {
+    img {
+      padding-left: 1rem;
+    }
+  }
 }
 
 @media (min-width: $tablet) and (max-width: $desktop) {
@@ -119,6 +125,7 @@ $landing-title-color: #4a4a4a;
 
   .title {
     font-size: 1.125rem;
+    width: 100%;
   }
 }
 
